plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

javafx {
    version = "23.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

group = 'com.kodilla'
version = '0.0.1-SNAPSHOT'


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // JavaFX
    implementation "org.openjfx:javafx-controls:23.0.2"
    implementation "org.openjfx:javafx-fxml:23.0.2"

    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.4'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.4'
    testImplementation 'org.junit.jupiter:junit-jupiter'

    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.14.2'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
    mainClass = 'com.kodilla.tictactoemaster.tic_tac_toe.TicTacToeGame'

    applicationDefaultJvmArgs = [
            "--module-path", "/path/to/javafx/lib",
            "--add-modules", "javafx.controls,javafx.fxml"
    ]
}

tasks.named('test') {
    useJUnitPlatform()
}
